# gpu-kernel-framework

./: .gitignore  CMakeLists.txt  README.md
bindings/: CMakeLists.txt  kernel_bindings.cpp
kernels/: CMakeLists.txt  kernels.cu.h
kernels/conv2d_bf16/: kernel.cu
kernels/conv2d_bf16/tests/deep/: test.py
kernels/conv2d_bf16/tests/large/: test.py
kernels/conv2d_bf16/tests/small/: test.py
kernels/conv2d_bf16/tests/stride/: test.py
kernels/conv2d_fp16/: kernel.cu
kernels/conv2d_fp16/tests/deep/: test.py
kernels/conv2d_fp16/tests/large_test/: test.py
kernels/conv2d_fp16/tests/small_test/: test.py
kernels/conv2d_fp16/tests/stride/: test.py
kernels/convolution/: conv.cu.h  conv_kernel.cu
kernels/eltw_add_bf16/: kernel.cu
kernels/eltw_add_bf16/tests/largemtx/: test.py
kernels/eltw_add_bf16/tests/test1/: test.py
kernels/eltw_add_bf16/tests/zeroneg/: test.py
kernels/eltw_add_fp16/: kernel.cu
kernels/eltw_add_fp16/tests/boundary_values/: test.py
kernels/eltw_add_fp16/tests/edge_case/: test.py
kernels/eltw_add_fp16/tests/test_1/: test.py
kernels/eltwise/: eltwise.cu  eltwise.cu.h  eltwise_kernel.cu
kernels/matmul/: matmul.cu  matmul.cu.h  matmul_kernel.cu
kernels/matmul_bf16/: kernel.cu
kernels/matmul_bf16/tests/boundary_values/: test.py
kernels/matmul_bf16/tests/negative/: test.py
kernels/matmul_bf16/tests/rectangular/: test.py
kernels/matmul_bf16/tests/small_test/: test.py
kernels/matmul_fp16/: kernel.cu
kernels/matmul_fp16/tests/basic/: test.py
kernels/matmul_fp16/tests/large/: test.py
kernels/matmul_fp16/tests/single/: test.py
python/: generate.py  generate_test_data.py  run.py  validate.py
python/reference/: conv_ref.py  eltwise_ref.py  matmul_ref.py  ref.py
python/utils/: compare.py  io.py
src/: gpu_utils.cu  tensor.h
tests/: test_all.py
